User section working 100 percent - except security

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,3 +1,5 @@
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 #admin-page { padding-top: 0px; }
+
+.status-img{ height: 50px; margin-top: 10px;}
