--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,8 @@
 #admin-page {
   padding-top: 0px; }
 
+.status-img {
+  height: 50px;
+  margin-top: 10px; }
+
 /*# sourceMappingURL=app.css.map */
